# elaiphant

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.cursor/rules/: general.mdc  python-style.mdc
.github/workflows/: python-tests.yaml
src/elaiphant/: __init__.py  agent.py  db.py  settings.py
tests/: conftest.py  test_db.py
